@@ -1,27 +1,25 @@
 package modforge.backend.model;
 
+import lombok.Getter;
+import lombok.Setter;
 import modforge.backend.ItemType;
 import modforge.backend.model.attributes.Attribute;
 
 import java.util.*;
 
+
+@lombok.extern.slf4j.Slf4j
 public abstract class BaseModItem implements ModItem {
 	private final List<Attribute> attributes = new ArrayList<>();
 	private final List<String> linkedIds = new ArrayList<>();
 	// TODO change the ID from string to a nicer object
 	// - can not do since we have id of 0 and id of -1 ... LOL
+	@Getter
+	@Setter
 	private String id;
+	@Getter
+	@Setter
 	private String path;
-	
-	@Override
-	public String getId() {
-		return this.id;
-	}
-	
-	@Override
-	public void setId(final String id) {
-		this.id = id;
-	}
 	
 	@Override
 	public String getIdKey() {
@@ -29,18 +27,8 @@ public abstract class BaseModItem implements ModItem {
 	}
 	
 	@Override
-	public String getPath() {
-		return this.path;
-	}
-	
-	@Override
-	public void setPath(final String v) {
-		this.path = v;
-	}
-	
-	@Override
 	public List<Attribute> getAttributes() {
-		return List.copyOf(this.attributes);
+		return Collections.unmodifiableList(this.attributes);
 	}
 	
 	@Override
@@ -50,13 +38,13 @@ public abstract class BaseModItem implements ModItem {
 	}
 	
 	@Override
-	public void addAttribute(final Attribute attr) {
-		this.attributes.add(attr);
+	public void removeAttribute(final Attribute attr) {
+		this.attributes.remove(attr);
 	}
 	
 	@Override
-	public void removeAttribute(final Attribute attr) {
-		this.attributes.remove(attr);
+	public void addAttribute(final Attribute attr) {
+		this.attributes.add(attr);
 	}
 	
 	@Override
@@ -66,7 +54,7 @@ public abstract class BaseModItem implements ModItem {
 	
 	@Override
 	public List<String> getLinkedIds() {
-		return this.linkedIds;
+		return Collections.unmodifiableList(this.linkedIds);
 	}
 	
 	@Override
